<resources>
    <string name="app_name">Cruzer</string>

    <!-- text boxes -->
    <string name="text_drawer_login">Click here to sign in</string>
    <string name="text_launcher_line">Cruzer helps you track your vehicle\'s service history and mileage.</string>
    <string name="text_first_vehicle">Add a vehicle</string>
    <string name="text_all_vehicles">Timeline</string>
    <string name="text_amount">\u20B9 %1$s</string>
    <string name="text_odometer"><![CDATA[<b>%1$s</b> km]]></string>
    <string name="text_date_time"><![CDATA[<b>%1$s</b> %2$s]]></string>
    <string name="text_volume"><![CDATA[<b>%1$s</b> ltr]]></string>
    <string name="text_rate"><![CDATA[<b>%1$s</b> \u20B9/ltr]]></string>
    <string name="text_user_name">%1$s %2$s</string>
    <string name="text_workshop_name">\@ %1$s</string>
    <string name="text_rupee">\u20B9&#160;</string>
    <string name="text_volume_suffix">&#160;L</string>
    <string name="text_rate_suffix">&#160;/L</string>
    <string name="text_odometer_suffix">&#160;km</string>
    <string name="text_vehicle_type_two_w">2-Wheelers</string>
    <string name="text_vehicle_type_four_w">4-Wheelers</string>
    <string name="text_offering_service"><![CDATA[Service & Repair]]></string>
    <string name="text_offering_tyre">Tyres</string>
    <string name="text_offering_batteries">Batteries</string>
    <string name="text_offering_accessories">Accessories</string>
    <string name="text_offering_beautification">Beautification</string>
    <string name="text_offering_puncture">Puncture</string>
    <string name="text_filter_footnote">* select none to see all workshops</string>

    <!-- options -->
    <string name="option_lcost">Labour Cost</string>
    <string name="option_pcost">Part Cost</string>

    <!-- labels -->
    <string name="label_ok">OK!</string>
    <string name="label_phone_number">Mobile Number</string>
    <string name="label_manager">Manager</string>
    <string name="label_address">Address</string>
    <string name="label_city">City</string>
    <string name="label_area">Area</string>
    <string name="label_offerings">Offerings</string>
    <string name="label_name">Name</string>
    <string name="label_email">Email Address</string>
    <string name="label_vehicle_name">Vehicle Name (optional)</string>
    <string name="label_vehicle_manu">Vehicle Company</string>
    <string name="label_vehicle_model">Vehicle Model</string>
    <string name="label_vehicle_reg">Vehicle Registration Number</string>
    <string name="label_odometer_reading">Odometer</string>
    <string name="label_enable">Enable</string>
    <string name="label_delete">delete</string>
    <string name="label_done">Go</string>
    <string name="label_show_password">Show Password</string>
    <string name="label_add">Add</string>
    <string name="label_date">Date</string>
    <string name="label_notes">Notes</string>
    <string name="label_password">Password</string>
    <string name="label_problems">Problems</string>
    <string name="label_service_status">Billing Status</string>
    <string name="label_yes">Yes</string>
    <string name="label_no">No</string>
    <string name="label_service_vehicle">Service entry for</string>
    <string name="label_refuel_vehicle">Refuel entry for</string>
    <string name="label_locator_filter_vehicle_type">Select your vehicle</string>
    <string name="label_locator_filter_workshop_offerings">What are you looking for?</string>
    <string name="label_history">Vehicle List</string>
    <string name="label_find">Find</string>
    <string name="label_get_started">Get Started</string>

    <!-- edit box hints -->
    <string name="hint_edit_field">Enter Here</string>
    <string name="hint_amount">Total Amount</string>
    <string name="hint_volume">Liters</string>
    <string name="hint_rate">Price</string>
    <string name="hint_notes">Add Notes</string>
    <string name="hint_edit_first_name">First Name</string>
    <string name="hint_edit_last_name">Last Name</string>
    <string name="hint_edit_password">Enter Password</string>
    <string name="hint_search">Search</string>
    <string name="hint_edit_problem_details">Enter Details</string>
    <string name="hint_edit_problem_cost">Enter Cost</string>

    <!-- hint examples -->
    <string name="example_vehicle_reg">e.g. GJ01AB9999</string>

    <!-- messages -->
    <string name="message_fill_details">Please Fill Details</string>
    <string name="message_fill_amount">Please provide amount</string>
    <string name="message_authenticating">Authenticating</string>
    <string name="message_registering">Registering</string>
    <string name="message_volley_error_response">Check your internet connection!</string>
    <string name="message_welcome">Welcome to Cruzer!</string>
    <string name="message_activity_load_error">Something went wrong. Please Try Again!</string>
    <string name="message_confirm_logout">Are you sure you want to logout ?</string>
    <string name="message_login_fail">Please check phone number or password</string>
    <string name="message_signup_fail">It seems you already are registered with Cruzer!\nTry signing in again</string>
    <string name="message_getting_data">Syncing essential user data</string>
    <string name="message_back_exit">Press again to exit!</string>
    <string name="message_back_logout">Press again to logout!</string>
    <string name="message_invalid_registration">Registration number should be like XX99XX9999</string>
    <string name="message_invalid_email">Please enter valid email address</string>
    <string name="message_perform_background">Performing in background</string>
    <string name="message_upload_ongoing">Uploading</string>
    <string name="message_wait_task_pending">Please Wait</string>
    <string name="message_wait_gps">Waiting for GPS</string>
    <string name="message_init_fail">Something went wrong! Please sign in again!</string>
    <string name="message_no_vehicles">No Vehicles Found!</string>
    <string name="message_location_access_fail">Check your location permissions</string>
    <string name="message_locator_no_workshops">No workshops around!</string>
    <string name="message_locator_workshops">%1$d workshop(s) found!</string>
    <string name="message_gps_ask">Please turn on location services!</string>
    <string name="message_select_vehicle">Please select a vehicle!</string>
    <string name="message_fill_password">Please Provide Password</string>
    <string name="message_confirm_delete">Are you sure you want to delete ?</string>

    <!-- errors -->
    <string name="error_server_password">Incorrect Password.</string>
    <string name="error_auth_fail">Failed to authenticate token.</string>
    <string name="error_no_user">User not found.</string>

    <!-- drawer strings -->
    <string name="drawer_item_history">History</string>
    <string name="drawer_item_vehicle">Vehicle</string>
    <string name="drawer_item_locator">Nearby</string>
    <string name="drawer_settings_general">Settings</string>
    <string name="drawer_settings_logout">Logout</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- title -->
    <string name="title_activity_workshop_locator">Workshops Nearby</string>
    <string name="title_refuel">Refuel</string>
    <string name="title_service">Service</string>
    <string name="title_workshop">Workshop</string>
    <string name="title_user">User</string>

    <!-- new strings -->
    <string name="label_other_option">Other</string>
    <string name="label_vehicle_model_name">Vehicle Model Name (Mandatory)</string>
    <string name="message_select_manu">Please select vehicle company</string>
    <string name="text_claim_workshop">Do you own this workshop?</string>
    <string name="label_claim_workshop">Claim</string>
    <string name="message_claim_workshop_permission_fail">Please call +91 9427800160</string>
    <string name="label_book_service">Book Service</string>
    <string name="message_book_service">Service booking request has been sent! %1$s will contact you!</string>
    <string name="label_policy_number">Policy Number</string>
    <string name="label_insurance_company">Insurance Company</string>
    <string name="label_start_date">Start Date</string>
    <string name="label_end_date">End Date</string>
    <string name="label_premium">Premium</string>
    <string name="label_details">Details</string>
    <string name="label_insurance_vehicle">Insurance for</string>
    <string name="text_to">to</string>
    <string name="title_insurance">Insurance</string>
    <string name="label_puc_vehicle">PUC For</string>
    <string name="label_puc_number">PUC Number</string>
    <string name="label_fees">Fees</string>
    <string name="title_puc">PUC</string>
    <string name="label_vat">VAT</string>
    <string name="label_upload_photo">Upload Photo</string>
    <string name="text_insurance_upload">Insurance data will be uploaded and reflected in your vehicle history.\nIt may take some time</string>
    <string name="text_puc_upload">PUC data will be uploaded and reflected in your vehicle history.\nIt may take some time</string>
    <string name="message_storage_access_fail">Please check your storage permissions</string>
    <string name="directory_cruzer">cruzer</string>
    <string name="message_upload_confirm">Receipt is uploaded! It will be added soon!</string>
    <string name="message_paytm">Follow us on Facebook to get cool updates!</string>
    <string name="paytm_like_us">Like us</string>
    <string name="hint_puc_no">PUC Number</string>
    <string name="hint_puc_fees">Amount</string>
    <string name="message_fill_puc_no">Please Fill PUC No</string>
    <string name="hint_policy_no">Policy Number</string>
    <string name="hint_insurance_premium">Premium Amount</string>
    <string name="message_fill_premium">Please Fill Premium Amount</string>
    <string name="message_fill_date">Please Fill Date</string>
    <string name="message_fill_insurance_company">Please Select Insurance Company</string>
</resources>
