<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.LinearLayoutCompat android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="20dp"
        android:animateLayoutChanges="true">

        <android.support.v7.widget.LinearLayoutCompat android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp">

            <android.support.v7.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/label_mobile"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:text="@string/label_phone_number"
                android:fontFamily="sans-serif-light"
                android:textAppearance="?android:attr/textAppearanceSmall"/>

            <android.support.v7.widget.AppCompatEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/edit_mobile"
                android:layout_marginTop="6dp"
                android:paddingBottom="18dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:focusable="false"
                android:inputType="textCapCharacters"
                android:hint="@string/hint_edit_field"
                android:textAppearance="?android:attr/textAppearanceSmall"/>

        </android.support.v7.widget.LinearLayoutCompat>

        <android.support.v7.widget.LinearLayoutCompat android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/layout_email"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="10dp">

            <android.support.v7.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/label_email"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:text="@string/label_email"
                android:fontFamily="sans-serif-light"
                android:textAppearance="?android:attr/textAppearanceSmall"/>

            <android.support.v7.widget.AppCompatEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/edit_email"
                android:layout_marginTop="6dp"
                android:inputType="textCapWords"
                android:focusable="false"
                android:paddingBottom="18dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:hint="@string/hint_edit_field"
                android:textAppearance="?android:attr/textAppearanceSmall"/>

        </android.support.v7.widget.LinearLayoutCompat>

        <android.support.v7.widget.LinearLayoutCompat android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/layout_name"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="10dp">

            <android.support.v7.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/text_name"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:text="@string/label_name"
                android:fontFamily="sans-serif-light"
                android:textAppearance="?android:attr/textAppearanceSmall"/>

            <android.support.v7.widget.LinearLayoutCompat android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:animateLayoutChanges="true">

                <android.support.v7.widget.AppCompatEditText
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:id="@+id/edit_first_name"
                    android:layout_weight="0.5"
                    android:inputType="textCapWords"
                    android:minEms="8"
                    android:paddingBottom="18dp"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:hint="@string/hint_edit_first_name"
                    android:textAppearance="?android:attr/textAppearanceMedium"/>

                <android.support.v7.widget.AppCompatEditText
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:id="@+id/edit_last_name"
                    android:layout_weight="0.5"
                    android:inputType="textCapWords"
                    android:minEms="8"
                    android:paddingBottom="18dp"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:hint="@string/hint_edit_last_name"
                    android:textAppearance="?android:attr/textAppearanceMedium"/>

            </android.support.v7.widget.LinearLayoutCompat>

        </android.support.v7.widget.LinearLayoutCompat>

        <android.support.v7.widget.LinearLayoutCompat android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/layout_password"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="10dp">

            <android.support.v7.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/label_password"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:text="@string/label_password"
                android:fontFamily="sans-serif-light"
                android:textAppearance="?android:attr/textAppearanceSmall"/>

            <android.support.v7.widget.AppCompatEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/edit_password"
                android:layout_marginTop="6dp"
                android:inputType="textPassword"
                android:fontFamily="sans-serif"
                android:paddingBottom="18dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:hint="@string/hint_edit_field"
                android:textAppearance="?android:attr/textAppearanceMedium"/>

            <android.support.v7.widget.AppCompatCheckBox
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/checkbox_show_password"
                android:layout_marginTop="8dp"
                android:text="@string/label_show_password"
                android:fontFamily="sans-serif-light"
                android:textStyle="italic"
                android:textAppearance="?android:attr/textAppearanceSmall"/>

        </android.support.v7.widget.LinearLayoutCompat>

        <android.support.v7.widget.LinearLayoutCompat android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:animateLayoutChanges="true">

            <android.support.v7.widget.LinearLayoutCompat android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="20dp"
                android:gravity="end">

                <android.support.v7.widget.AppCompatButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/button_create_record"
                    android:text="@string/label_done"
                    app:backgroundTint="@color/cruzer_blue_accent"
                    android:textColor="@android:color/white"
                    app:borderWidth="0dp"
                    android:textAppearance="?android:attr/textAppearanceSmall"/>

            </android.support.v7.widget.LinearLayoutCompat>

        </android.support.v7.widget.LinearLayoutCompat>


    </android.support.v7.widget.LinearLayoutCompat>

</ScrollView>