<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white">

    <android.support.v7.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/layout_vehicle"
        android:gravity="center"
        android:padding="20dp">

        <android.support.v7.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/label_vehicle"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:text="@string/label_puc_vehicle"
            android:fontFamily="sans-serif-light"
            android:textAppearance="?android:attr/textAppearanceSmall"/>

        <android.support.v7.widget.AppCompatSpinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/spinner_vehicle"/>

    </android.support.v7.widget.LinearLayoutCompat>

    <android.support.v7.widget.LinearLayoutCompat android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center">

        <android.support.v7.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_puc_upload"
            android:layout_margin="20dp"
            android:gravity="center"
            android:textAppearance="?android:attr/textAppearanceSmall"/>

        <android.support.v7.widget.AppCompatButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button_puc_photo"
            android:paddingLeft="30dp"
            android:paddingRight="30dp"
            android:layout_marginBottom="10dp"
            android:text="@string/label_upload_photo"
            android:textColor="@android:color/white"
            android:textAppearance="?android:attr/textAppearanceSmall"/>

    </android.support.v7.widget.LinearLayoutCompat>

</android.support.design.widget.CoordinatorLayout>