<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginTop="20dp"
    android:layout_marginBottom="20dp"
    android:layout_marginLeft="10dp"
    android:layout_marginRight="10dp"
    app:borderWidth="0dp"
    android:animateLayoutChanges="true">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:animateLayoutChanges="true">

        <android.support.v7.widget.LinearLayoutCompat android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="20dp"
            android:paddingBottom="20dp"
            android:animateLayoutChanges="true">

            <android.support.v7.widget.LinearLayoutCompat android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/layout_mobile"
                android:layout_margin="20dp"
                android:animateLayoutChanges="true">

                <android.support.v7.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/text_mobile"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:text="@string/label_phone_number"
                    android:fontFamily="sans-serif-light"
                    android:textAppearance="?android:attr/textAppearanceSmall"/>

                <android.support.v7.widget.AppCompatEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/edit_mobile"
                    android:inputType="phone"
                    android:ems="13"
                    android:maxEms="13"
                    android:layout_marginTop="6dp"
                    android:paddingBottom="18dp"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:fontFamily="sans-serif-thin"
                    android:hint="@string/hint_edit_field"
                    android:textAppearance="?android:attr/textAppearanceLarge"/>
            </android.support.v7.widget.LinearLayoutCompat>

            <android.support.v7.widget.LinearLayoutCompat android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp">

                <android.support.v4.widget.Space
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.3"/>

                <android.support.v7.widget.AppCompatButton
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.2"
                    android:id="@+id/button_login_phone"
                    android:text="@string/label_done"
                    app:borderWidth="0dp"
                    app:backgroundTint="@color/cruzer_blue_accent"
                    android:textColor="@android:color/white"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:textAppearance="?android:attr/textAppearanceSmall" />

            </android.support.v7.widget.LinearLayoutCompat>

            <android.support.v7.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="18dp"
                android:layout_marginRight="18dp"
                android:id="@+id/text_message"
                android:gravity="center_horizontal"
                android:text="@string/message_welcome"
                android:fontFamily="sans-serif-light"
                android:textStyle="italic"
                android:textColor="@color/grey_800"
                android:textAppearance="?android:attr/textAppearanceSmall"/>

        </android.support.v7.widget.LinearLayoutCompat>
    </ScrollView>

</android.support.v7.widget.CardView>
